Setup wallpapers based on time of day

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -29,7 +29,7 @@ default_border pixel 3
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg ~/.wallpapers/morning.jpg fill
 #
 # Example configuration:
 #
