--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,4 +1,4 @@
-command = "fish"
+command = "/bin/bash --login -c fish"
 font-family = "FiraCode Nerd Font Mono:style=Regular"
 theme = "TokyoNight"
 shell-integration = "fish"
