--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -6,5 +6,6 @@ confirm-close-surface = "false"
 quit-after-last-window-closed = "true"
 background-opacity = "0.95"
 background-blur = "true"
-window-decoration = "none"
-window-show-tab-bar = "never"
+gtk-titlebar = "false"
+gtk-tabs-location = "hidden"
+macos-titlebar-style = "hidden"
