Update lock config and add clip history

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,6 +23,8 @@ $lock = hyprlock
 exec-once = waybar
 exec-once = dunst
 exec-once = ~/.scripts/update_wallpaper.sh --force
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -149,6 +151,7 @@ bind = $MOD_SHIFT, B, exec, $browser
 bind = $MOD, E, exec, $terminal -e $fileManager
 bind = $MOD, O, exec, $menu
 bind = ALT, L, exec, $lock
+bind = $MOD, V, exec, cliphist list | hyprlauncher --dmenu | cliphist decode | wl-copy
 
 # System Shortcuts
 bind = $MOD, W, killactive,
