--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -93,9 +93,8 @@ shape {
 # USER LABEL
 label {
     monitor =
-    text =  $USER
+    text = <i><span foreground="##c0caf5" font_size='15pt' font_family="FiraCode Nerd Font Mono">👤 $USER</span></i>
     color = $purple
-    font_size = 20
     font_family = FiraCode Nerd Font Mono
     position = 0, -140
     halign = center
@@ -116,7 +115,7 @@ input-field {
     check_color = $yellow
     fail_color = $pink
     fade_on_empty = false
-    placeholder_text = <i><span foreground="##c0caf5" font_size='20pt' font_family="FiraCode Nerd Font Mono">  Enter Password</span></i>
+    placeholder_text = <i><span foreground="##c0caf5" font_size='15pt' font_family="FiraCode Nerd Font Mono">🔒 Enter Password</span></i>
     hide_input = false
     rounding = 10
     position = 0, -220
