--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,6 +20,7 @@ $lock = hyprlock
 ### AUTOSTART ###
 #################
 
+exec-once = hypridle
 exec-once = waybar
 exec-once = dunst
 exec-once = ~/.scripts/update_wallpaper.sh --force
