Open wiremix onclick in waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -242,6 +242,14 @@ windowrule {
 }
 
 windowrule {
+    name = wiremix
+    match:class = com.user.wiremix
+    float = yes
+    center = on
+    size = (monitor_w*0.7) (monitor_h*0.7)
+}
+
+windowrule {
     name = bluetui
     match:class = com.user.bluetui
     float = yes
