--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -1,4 +1,18 @@
+# =========================================================
+# General
+# =========================================================
 start-at-login = true
+
+config-version = 2
+
+after-startup-command = [
+  'exec-and-forget ~/.local/bin/borders active_color=0xffe1e3e4 inactive_color=0x00000000 width=5.0',
+]
+
+default-root-container-layout = 'tiles'
+enable-normalization-flatten-containers = true
+enable-normalization-opposite-orientation-for-nested-containers = true
+automatically-unhide-macos-hidden-apps = true
 
 [gaps]
 inner.horizontal = 4
@@ -29,6 +43,9 @@ alt-w = 'close --quit-if-last-window'
 # Toggle window fullscreen
 alt-f = 'fullscreen'
 
+# Toggle layout
+alt-t = 'layout tiles horizontal vertical'
+
 # =========================================================
 # VIM NAVIGATION (Focus)
 # =========================================================
@@ -46,11 +63,8 @@ alt-shift-k = 'move up'
 alt-shift-l = 'move right'
 
 # =========================================================
-# LAYOUT & UTILS (i3 inspired)
+# UTILS
 # =========================================================
-
-# Toggle between tiling layout and floating
-alt-shift-space = 'layout floating tiling'
 
 # Reload Config (Essential for tweaking)
 alt-shift-r = 'reload-config'
