--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -6,7 +6,7 @@ start-at-login = true
 config-version = 2
 
 after-startup-command = [
-  'exec-and-forget ~/.local/bin/borders active_color=0xffe1e3e4 inactive_color=0x00000000 width=5.0',
+  'exec-and-forget /usr/bin/env bash -c "borders style=round width=9 active_color=0xff56b6c2 inactive_color=0x00000000"',
 ]
 
 default-root-container-layout = 'tiles'
@@ -15,12 +15,12 @@ enable-normalization-opposite-orientation-for-nested-containers = true
 automatically-unhide-macos-hidden-apps = true
 
 [gaps]
-inner.horizontal = 4
-inner.vertical =   4
-outer.left =       4
-outer.bottom =     4
-outer.top =        4
-outer.right =      4
+inner.horizontal = 8
+inner.vertical =   8
+outer.left =       8
+outer.bottom =     8
+outer.top =        8
+outer.right =      8
 
 [mode.main.binding]
 
@@ -35,7 +35,7 @@ alt-enter = 'exec-and-forget open -na Ghostty'
 alt-shift-b = 'exec-and-forget open -na "Google Chrome"'
 
 # Open File Browser
-alt-shift-f = 'exec-and-forget open -na Ghostty --args -e ~/.nix-profile/bin/yazi'
+alt-shift-f = 'exec-and-forget open -na Ghostty --args -e yazi'
 
 # Close the focused window
 alt-w = 'close --quit-if-last-window' 
