Update hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,6 +14,7 @@ $terminal = ghostty
 $fileManager = yazi
 $menu = hyprlauncher
 $browser = zen-browser
+$gbrowser = google-chrome
 $lock = hyprlock
 
 #################
@@ -149,6 +150,7 @@ $MOD = SUPER
 # Application Shortcuts
 bind = $MOD, RETURN, exec, $terminal
 bind = $MOD_SHIFT, B, exec, $browser
+bind = $MOD_SHIFT, G, exec, $gbrowser
 bind = $MOD, E, exec, $terminal -e $fileManager
 bind = $MOD, O, exec, $menu
 bind = ALT, L, exec, $lock
