Move lock to alt+shift+l

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -153,7 +153,7 @@ bind = $MOD_SHIFT, B, exec, $browser
 bind = $MOD_SHIFT, G, exec, $gbrowser
 bind = $MOD, E, exec, $terminal -e $fileManager
 bind = $MOD, O, exec, $menu
-bind = ALT, L, exec, $lock
+bind = ALT_SHIFT, L, exec, $lock
 bind = $MOD, V, exec, cliphist list | hyprlauncher --dmenu | cliphist decode | wl-copy
 
 # System Shortcuts
