--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -91,7 +91,7 @@
             "quiet": "\udb80\udf2a",
             "balanced": "\udb80\ude10",
             "performance": "\uf427",
-            "default": "?"
+            "default": ""
         }
     },
 
