Cleanup and switch to catppuccin-mocha

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,10 +1,10 @@
 command = "/bin/bash --login -c fish"
 font-family = "FiraCode Nerd Font Mono:style=Regular"
-theme = "tokyonight_storm"
+theme = "catppuccin-mocha.conf"
 shell-integration = "fish"
 confirm-close-surface = "false"
 quit-after-last-window-closed = "true"
-background-opacity = "0.95"
+background-opacity = "0.96"
 background-blur = "true"
 gtk-titlebar = "false"
 gtk-tabs-location = "hidden"
