--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -9,3 +9,5 @@ background-blur = "true"
 gtk-titlebar = "false"
 gtk-tabs-location = "hidden"
 macos-titlebar-style = "hidden"
+clipboard-read = "allow"
+clipboard-write = "allow"
