Make OSC52 read request permission

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -9,5 +9,5 @@ background-blur = "true"
 gtk-titlebar = "false"
 gtk-tabs-location = "hidden"
 macos-titlebar-style = "hidden"
-clipboard-read = "allow"
+clipboard-read = "ask"
 clipboard-write = "allow"
